Prepare v1.0.5 copy and strm fixes
